# videoflix-backend

./: .dockerignore  .env.template  .gitattributes  .gitignore  .oxfmtrc.json  README.md  backend.Dockerfile  backend.entrypoint.sh  docker-compose.dokploy.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pause.prod.sh  pyproject.toml  requirements.txt  start.prod.sh  stop.prod.sh
.zed/: settings.json
auth_app/: admin.py  apps.py  models.py
auth_app/api/: helpers.py  serializers.py  signals.py  tasks.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py
auth_app/templates/emails/: activation.html  base.html  password_reset.html
auth_app/tests/: test_activation.py  test_confirm_password.py  test_login.py  test_logout.py  test_registration.py  test_reset_password.py  test_token_refresh.py
core/: authentication.py  redis_client.py  settings.py  urls.py
video_app/: admin.py  apps.py  models.py  validate_video.py
video_app/api/: helpers.py  serializers.py  signals.py  tasks.py  urls.py  views.py
video_app/migrations/: 0001_initial.py
video_app/tests/: test_get_videos.py
